# JWTTOKENLIB

./: .gitignore  CMakeLists.txt  COMPLETE_PROMPT.md  JWT_TOKEN_LIB_SPECIFICATION.txt  README.md  REQUIREMENTS.md  TROUBLESHOOTING.md  USERGUIDE.md  jwt-lib.js
examples/: devweb_example.js  vugen_example.c
include/: jwtlib.h
src/: jwt_core.c  jwt_core.h
src/algorithms/: es256.c  hs256.c  ps256.c  rs256.c
src/bindings/: c_exports.c
src/utils/: base64url.c  key_manager.c
tests/: test_devweb.js  test_standalone.c
